
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int PAGE_SIZE ;
 int assert (int) ;
 int info (char*,...) ;
 scalar_t__ memcmp (char*,char*,int) ;
 int page_check_phys (unsigned long) ;
 int phys_read_range (unsigned long,int,char*) ;
 int strlen (char*) ;

void phys_search(unsigned long start, unsigned long end, char *needle) {
 char buffer[PAGE_SIZE];
 int length = strlen(needle);

 assert(length <= PAGE_SIZE);

 unsigned long offset;
 for (offset = start; offset < end; offset += PAGE_SIZE) {
  if (offset % (32ul << 20) == 0)
   info("[.] now at %016lx\n", offset);
  if (!page_check_phys(offset))
   continue;
  phys_read_range(offset, length, &buffer[0]);
  if (memcmp(&buffer[0], needle, length) != 0)
   continue;
  info("[+] found at %016lx\n", offset);
  return;
 }
 info("[-] not found\n");
}
